correction alignement

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,14 @@ body {
 
 #page-wrapper {
     max-width: 100vw;
+    margin: 0 auto;
 }
+
+.section-content {
+    max-width: 1200px;
+    padding: 0 10px;
+}
+
 h1, h2, h3 {
     color: #672a3f;
     font-weight: 600;
@@ -202,7 +209,7 @@ table {
     width: 95%;
     border-collapse: collapse;
     border: 2px solid #EFF0F0;
-    margin: 20px 0;
+    margin: 20px auto;
 }
 
 thead {
@@ -289,6 +296,7 @@ td {
 #contact .text-left {
     max-width: 200px;
     padding: 2px;
+    margin: 0 2em;
 }
 
 #contact .text-right p {
